--- a/package.json
+++ b/package.json
@@ -45,7 +45,10 @@
   },
   "scripts": {
     "build": "gulp build",
-    "serve": "gulp jekyll",
+    "build-docs-css": "node-sass --include-path node_modules docs/sass --source-map true --output-style compressed --output docs/css && yarn run build && cp build/css/build.css docs/css/current-vanilla.css",
+    "build-docs-site": "bundle exec jekyll build --source docs --destination docs/_site",
+    "build-docs": "yarn run build-docs-css && yarn run build-docs-site",
+    "serve": "yarn run build-docs && bundle exec jekyll serve --source docs --destination docs/_site --port ${PORT} -H 0.0.0.0",
     "test": "gulp test",
     "watch": "gulp develop",
     "clean": "rm -rf build _jekyll/_site docs/templates node_modules/ yarn-error.log .bundle",
@@ -55,6 +58,7 @@
   },
   "version": "1.8.0",
   "dependencies": {
+    "docs-vanilla-framework": "npm:vanilla-framework@1.8.1",
     "minimist": "^1.2.0"
   }
 }
