Include live built vanilla CSS in examples
This means what whenever build/css/build.min.css is updated,
e.g. through the watcher, the docs site will
automatically update to you can always see the latest version
of CSS in /examples.

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "serve": "yarn run build-docs && bundle exec jekyll serve --source docs --destination docs/_site --port ${PORT} -H 0.0.0.0",
     "test": "gulp test",
     "watch": "gulp develop",
-    "clean": "rm -rf build docs/_site node_modules/ yarn-error.log .bundle",
+    "clean": "rm -rf build docs/css docs/_site node_modules/ yarn-error.log .bundle",
     "report": "gulp report",
     "precommit": "pretty-quick --staged"
   },
