Add back NPM support

--- a/package.json
+++ b/package.json
@@ -39,8 +39,11 @@
     "precommit": "pretty-quick --staged"
   },
   "version": "1.8.0",
+  "devDependenciesComments": {
+    "vanilla-framework": "vanilla-framework is included in devDependencies for use in styling the docs site"
+  },
   "devDependencies": {
-    "docs-vanilla-framework": "npm:vanilla-framework@1.8.1",
+    "vanilla-framework": "1.8.1",
     "es6-promise": "^4.0.5",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
