--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,18 @@
 {
-  "extends": [
-    "config:base"
+  "extends": ["config:base", "schedule:monthly", "group:all"],
+  "packageRules": [
+    {
+      "depTypeList": ["devDependencies"],
+      "extends": [":automergeMinor"]
+    },
+    {
+      "packageNames": ["vanilla-framework"],
+      "minor": {
+        "automerge": false
+      },
+      "patch": {
+        "automerge": false
+      }
+    }
   ]
 }
