--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "report": "gulp report",
     "precommit": "pretty-quick --staged"
   },
-  "version": "1.8.1",
+  "version": "2.0.0-alpha",
   "devDependenciesComments": {
     "vanilla-framework": "vanilla-framework is included in devDependencies for use in styling the docs site"
   },
