--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "test": "gulp test",
     "watch": "gulp develop",
     "clean": "rm -rf build docs/css docs/_site node_modules/ yarn-error.log .bundle",
-    "report": "gulp report",
-    "precommit": "pretty-quick --staged"
+    "report": "gulp report"
   },
   "version": "2.0.0-alpha",
   "devDependenciesComments": {
@@ -59,5 +58,10 @@
     "prettier": "1.14.3",
     "pretty-quick": "^1.7.0",
     "wrench": "^1.5.9"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
