Use run script v3.4.1

--- a/docs/Dockerfile
+++ b/docs/Dockerfile
@@ -8,15 +8,14 @@ WORKDIR /srv
 RUN apt-get update && apt-get install --yes nginx net-tools
 
 # Set git commit ID
-ARG COMMIT_ID
-RUN test -n "${COMMIT_ID}"
+ARG REVISION_ID
+RUN test -n "${REVISION_ID}"
 
 # Copy over files
 ADD _site/ ./
 ADD nginx.conf /etc/nginx/sites-enabled/default
 ADD redirects.map /etc/nginx/redirects.map
-RUN sed -i "s/~COMMIT_ID~/${COMMIT_ID}/" /etc/nginx/sites-enabled/default
-RUN sed -i "s/8104/80/" /etc/nginx/sites-enabled/default
+RUN sed -i "s/~REVISION_ID~/${REVISION_ID}/" /etc/nginx/sites-enabled/default
 
 STOPSIGNAL SIGTERM
 
