--- a/docs/nginx.conf
+++ b/docs/nginx.conf
@@ -9,8 +9,8 @@ map $uri $target {
 }
 
 server {
-    listen 8104 default_server;
-    listen [::]:8104 default_server;
+    listen 80 default_server;
+    listen [::]:80 default_server;
     server_name _;
 
     # Log to stdout
@@ -24,9 +24,9 @@ server {
     # Show 404 page
     error_page 404 /en/404.html;
 
-    # Show commit-id
-    add_header X-Commit-ID ~COMMIT_ID~ always;
-    add_header X-Hostname $hostname always;
+    # Show revision-tag
+    add_header x-vcs-revision ~REVISION_ID~ always;
+    add_header x-hostname $hostname always;
 
     # Apply redirects from file
     if ($target ~* '://') {
