--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # [generated] Bracketed sections updated by Yeoman generator
-# generator-canonical-webteam@2.2.0
+# generator-canonical-webteam@3.4.1
 
 # [os] OS & editor files
 Desktop.ini
@@ -41,6 +41,7 @@ package-lock.json
 /parts/
 /prime/
 /stage/
+*.egg-info
 .snapcraft/
 *.snap
 _site/
@@ -50,6 +51,7 @@ _site/
 .docker-project
 .*.hash
 .envrc
+.env.local
 env/
 env[23]/
 
