--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "clean": "rm -rf build docs/css docs/_site node_modules/ yarn-error.log .bundle",
     "report": "gulp report"
   },
-  "version": "2.0.0-beta",
+  "version": "2.0.0-beta.1",
   "devDependenciesComments": {
     "vanilla-framework": "vanilla-framework is included in devDependencies for use in styling the docs site"
   },
