--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "url": "https://github.com/vanilla-framework/vanilla-framework"
   },
   "scripts": {
-    "build": "gulp build",
+    "$build": "gulp build",
+    "build": "node-sass --include-paths node_modules scss --source-map true --output-style compressed --output build/css && postcss --use autoprefixer --replace 'build/css/**/*.css' --no-map",
     "build-docs-css": "node-sass --include-path node_modules docs/sass --source-map true --output-style compressed --output docs/css",
     "build-docs-site": "bundle exec jekyll build --source docs --destination docs/_site",
     "build-docs": "yarn run build && yarn run build-docs-css && yarn run build-docs-site",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "vanilla-framework": "1.8.1",
+    "autoprefixer": "9.5.0",
     "es6-promise": "4.2.6",
     "gulp": "3.9.1",
     "gulp-autoprefixer": "4.1.0",
@@ -54,7 +56,9 @@
     "gulp-sourcemaps": "2.6.5",
     "husky": "1.3.1",
     "markdown-spellcheck": "1.3.1",
+    "node-sass": "4.11.0",
     "parker": "0.0.10",
+    "postcss-cli": "6.1.2",
     "prettier": "1.14.3",
     "pretty-quick": "1.10.0",
     "wrench": "1.5.9"
