Remove the parker report endpoint

--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "test": "yarn run lint-scss && mdspell docs/**/*.md -r -n -a --en-gb && node -e 'require(\"./tests/parker\").parkerTest()'",
     "lint-scss": "sass-lint 'scss/**/*.scss' --verbose --no-exit --max-warnings=0",
     "watch": "gulp develop",
-    "clean": "rm -rf build docs/css docs/_site node_modules/ yarn-error.log .bundle",
-    "report": "gulp report"
+    "clean": "rm -rf build docs/css docs/_site node_modules/ yarn-error.log .bundle"
   },
   "version": "2.0.0-beta.1",
   "devDependenciesComments": {
