Replace develop script with NPM script

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "$test": "gulp test",
     "test": "yarn run lint-scss && mdspell docs/**/*.md -r -n -a --en-gb && node -e 'require(\"./tests/parker\").parkerTest()'",
     "lint-scss": "sass-lint 'scss/**/*.scss' --verbose --no-exit --max-warnings=0",
-    "watch": "gulp develop",
+    "$watch": "gulp develop",
+    "watch": "watch -p 'scss/*.scss' -p 'node_modules/vanilla-framework/scss/*.scss' -c 'yarn run build'",
     "clean": "rm -rf build docs/css docs/_site node_modules/ yarn-error.log .bundle"
   },
   "version": "2.0.0-beta.1",
@@ -63,6 +64,7 @@
     "sass-lint": "1.12.1",
     "prettier": "1.14.3",
     "pretty-quick": "1.10.0",
+    "watch-cli": "0.2.3",
     "wrench": "1.5.9"
   },
   "husky": {
