Update vanilla framework to 2.0.0-beta.1 and fix broken variable names

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "vanilla-framework": "vanilla-framework is included in devDependencies for use in styling the docs site"
   },
   "devDependencies": {
-    "vanilla-framework": "1.8.1",
+    "vanilla-framework": "2.0.0-beta.1",
     "autoprefixer": "9.5.0",
     "husky": "1.3.1",
     "markdown-spellcheck": "1.3.1",
