--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "author": {
     "email": "webteam@canonical.com",
-    "name": "Canonical Webteam",
-    "url": "http://design.canonical.com/team"
+    "name": "Canonical Webteam"
   },
   "bugs": {
     "email": "webteam@canonical.com",
