Update Travis config with correct versions of node and bundler

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 language: node_js
 node_js:
-  - '10.15.3'
+  - '12.14.0'
 before_install:
   - rvm install 2.4.0
+  # make sure bundler@1 is installed
+  # https://docs.travis-ci.com/user/languages/ruby/#bundler
+  - gem uninstall -v '>= 2' -i $(rvm gemdir)@global -ax bundler || true
+  - gem install bundler -v '< 2'
 install:
   - gem install percy-cli
   - gem install sass
