Install bundler@1 on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ node_js:
   - '10.15.3'
 before_install:
   - rvm install 2.4.0
+  # specifically install bundler 1.16.6 (as per Gemfile)
+  - gem install bundler:1.16.6
 install:
   - gem install percy-cli
   - gem install sass
