--- a/renovate.json
+++ b/renovate.json
@@ -13,6 +13,11 @@
       "patch": {
         "automerge": false
       }
+    },
+    {
+      "#": "pretty-quick@2 requires version of node that we can't install on jenkins",
+      "packageNames": ["pretty-quick"],
+      "allowedVersions": "<=2"
     }
   ]
 }
