--- a/package.json
+++ b/package.json
@@ -38,19 +38,20 @@
   },
   "version": "2.5.0",
   "devDependenciesComments": {
-    "vanilla-framework": "vanilla-framework is included in devDependencies for use in styling the docs site"
+    "vanilla-framework": "vanilla-framework is included in devDependencies for use in styling the docs site",
+    "pretty-quick": "keep pretty-quick on v1, pretty-quick@2 requires version of node that we can't install on jenkins"
   },
   "devDependencies": {
-    "vanilla-framework": "2.5.0",
     "autoprefixer": "9.7.1",
     "husky": "3.0.9",
     "markdown-spellcheck": "1.3.1",
     "node-sass": "4.13.0",
     "parker": "0.0.10",
     "postcss-cli": "6.1.3",
-    "sass-lint": "1.13.1",
     "prettier": "1.18.2",
-    "pretty-quick": "2.0.0",
+    "pretty-quick": "1.11.1",
+    "sass-lint": "1.13.1",
+    "vanilla-framework": "2.5.0",
     "watch-cli": "0.2.3"
   },
   "husky": {
