Enable multistage build for docs site

--- a/docs/nginx.conf
+++ b/docs/nginx.conf
@@ -25,7 +25,7 @@ server {
     error_page 404 /404.html;
 
     # Show revision-tag
-    add_header x-vcs-revision ~REVISION_ID~ always;
+    add_header x-vcs-revision ~BUILD_ID~ always;
     add_header x-hostname $hostname always;
 
     # Apply redirects from file
