Add `yarn run get-urls` to get all URLs on site

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "test": "yarn run lint-scss && mdspell docs/**/*.md -r -n -a --en-gb && node -e 'require(\"./tests/parker\").parkerTest()'",
     "lint-scss": "sass-lint 'scss/**/*.scss' --verbose --no-exit --max-warnings=0",
     "watch": "watch -p 'scss/*.scss' -p 'node_modules/vanilla-framework/scss/*.scss' -c 'yarn run build'",
-    "clean": "rm -rf build docs/css docs/_site node_modules/ yarn-error.log .bundle"
+    "clean": "rm -rf build docs/css docs/_site node_modules/ yarn-error.log .bundle",
+    "get-urls": "scripts/get-urls.sh"
   },
   "version": "2.5.0",
   "devDependenciesComments": {
@@ -52,7 +53,8 @@
     "pretty-quick": "2.0.0",
     "sass-lint": "1.13.1",
     "vanilla-framework": "2.5.0",
-    "watch-cli": "0.2.3"
+    "watch-cli": "0.2.3",
+    "get-site-urls": "1.1.7"
   },
   "husky": {
     "hooks": {
