Remove unnecessary files from clean

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "test": "yarn run lint-scss && mdspell docs/**/*.md -r -n -a --en-gb && node -e 'require(\"./tests/parker\").parkerTest()'",
     "lint-scss": "sass-lint 'scss/**/*.scss' --verbose --no-exit --max-warnings=0",
     "watch": "watch -p 'scss/*.scss' -p 'node_modules/vanilla-framework/scss/*.scss' -c 'yarn run build'",
-    "clean": "rm -rf build docs/css docs/_site node_modules/ yarn-error.log .bundle"
+    "clean": "rm -rf build docs/static/css node_modules/ yarn-error.log"
   },
   "version": "2.5.0",
   "devDependenciesComments": {
