--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@percy/script": "^1.0.3",
     "autoprefixer": "9.7.1",
+    "get-site-urls": "^1.1.7",
     "husky": "3.0.9",
     "markdown-spellcheck": "1.3.1",
     "node-sass": "4.13.0",
