Add redirects for previous locations of static resources

--- a/redirects.yaml
+++ b/redirects.yaml
@@ -1,3 +1,6 @@
 /en/?: /
 /en/(?P<path>.*): /{path}
 /(?P<path>.+)\.html: /{path}
+/build/(?P<path>.*): /static/build/{path}
+/css/(?P<path>.*): /static/css/{path}
+/js/(?P<path>.*): /static/js/{path}
