--- a/package.json
+++ b/package.json
@@ -54,8 +54,7 @@
     "prettier": "1.19.1",
     "pretty-quick": "2.0.1",
     "sass-lint": "1.13.1",
-    "vanilla-framework": "2.6.0",
-    "watch-cli": "0.2.3"
+    "vanilla-framework": "2.6.0"
   },
   "husky": {
     "hooks": {
