Remove vanilla from dependencies

--- a/package.json
+++ b/package.json
@@ -57,8 +57,7 @@
     "postcss-cli": "7.1.0",
     "prettier": "1.19.1",
     "pretty-quick": "2.0.1",
-    "sass-lint": "1.13.1",
-    "vanilla-framework": "2.6.0"
+    "sass-lint": "1.13.1"
   },
   "husky": {
     "hooks": {
