--- a/package.json
+++ b/package.json
@@ -27,13 +27,11 @@
   },
   "scripts": {
     "build": "node-sass --include-paths node_modules scss --output-style compressed --output build/css && postcss --use autoprefixer --replace 'build/css/**/*.css' --no-map",
-    "build-docs-css": "node-sass --include-path node_modules docs/static/scss --output-style compressed --output docs/static/css",
-    "serve": "yarn run build-docs-css && ./entrypoint 0.0.0.0:${PORT}",
+    "serve": "./entrypoint 0.0.0.0:${PORT}",
     "test": "yarn run lint-scss && mdspell docs/**/*.md -r -n -a --en-gb && node -e 'require(\"./tests/parker\").parkerTest()'",
     "lint-scss": "sass-lint 'scss/**/*.scss' --verbose --no-exit --max-warnings=0",
     "watch:vanilla-scss": "node-sass --include-paths node_modules scss --output-style compressed --output build/css --watch",
     "watch:vanilla-scss:skip-standalone": "node-sass --include-paths node_modules scss/build.scss --output-style compressed --output build/css --watch",
-    "watch:docs-scss": "node-sass --include-path node_modules docs/static/scss --output-style compressed --output docs/static/css --watch",
     "watch": "yarn build && yarn watch:vanilla-scss",
     "clean": "rm -rf build docs/static/css node_modules/ yarn-error.log",
     "percy": "percy exec -- node snapshots.js"
