--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "percy": "percy exec -- node snapshots.js"
   },
   "version": "2.6.0",
+  "files": [
+    "/scss"
+  ],
   "devDependenciesComments": {
     "vanilla-framework": "vanilla-framework is included in devDependencies for use in styling the docs site",
     "pretty-quick": "keep pretty-quick on v1, pretty-quick@2 requires version of node that we can't install on jenkins"
