Remove docs scss from npm package

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   },
   "version": "2.6.0",
   "files": [
-    "/scss"
+    "/scss",
+    "!/scss/docs"
   ],
   "devDependenciesComments": {
     "vanilla-framework": "vanilla-framework is included in devDependencies for use in styling the docs site",
