Test upload assets

--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -15,3 +15,7 @@ jobs:
       run: |
         echo Add other actions to build,
         echo test, and deploy your project.
+    - name: Install upload-assets
+      run: sudo snap install upload-assets
+    - name: Run upload-assets
+      run: upload-assets
