--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -3,10 +3,8 @@ name: Hello
 on: [push]
 
 jobs:
-  build:
-
+  hello:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Run a one-line script
@@ -15,7 +13,33 @@ jobs:
       run: |
         echo Add other actions to build,
         echo test, and deploy your project.
-    - name: Install upload-assets
-      run: sudo snap install upload-assets
-    - name: Run upload-assets
-      run: upload-assets
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12
+      - name: Install
+        run: yarn install
+      - name: Build
+        run: yarn build
+      - name: Test
+        run: yarn test
+  python:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.x
+      uses: actions/setup-python@v1
+      with:
+        python-version: '3.x' # Semantic version range syntax or exact version of a Python version
+    # You can test your matrix by printing the current Python version
+    - name: Display Python version
+      run: python -c "import sys; print(sys.version)"
+    - name: Install pip dependencies
+      run: pip3 install -r requirements.txt
+#     - name: Install upload-assets
+#       run: sudo snap install upload-assets
+#     - name: Run upload-assets
+#       run: upload-assets
