--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -44,6 +44,7 @@ jobs:
        - run: cat css/build.css
   release:
     name: Create Release
+    needs: [build]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
