--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -57,12 +57,8 @@ jobs:
         with:
           tag_name: v2.7.0-action.test
           release_name: Release v2.7.0-action.test
-          body: |
-            Changes in this Release
-            - First Change
-            - Second Change
           draft: false
-          prerelease: false
+          prerelease: true
       - uses: actions/download-artifact@v1
         with:
           name: css  
