--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -55,7 +55,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          tag_name: v2.7.0-action.test
+          tag_name: v2.7.0-action.test1
           release_name: Release v2.7.0-action.test
           draft: false
           prerelease: true
