Update release drafter template, use it as GH Workflow

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,17 +1,15 @@
 name-template: 'v$NEXT_PATCH_VERSION'
 tag-template: 'v$NEXT_PATCH_VERSION'
 categories:
-  - title: '💣 Breaking Change'
-    labels:
-      - 'Breaking Change 💣'
   - title: '🚀 Features'
-    labels:
-      - 'Feature 🎁'
-      - 'Enhancement ✨'
+    label: 'Feature 🎁'
+  - title: '💣 Breaking Change'
+    label: 'Breaking Change 💣'
   - title: '🐛 Bug Fixes'
-    labels:
-      - 'Bug 🐛'
-  - title: '🔨 Maintenance '
+    label: 'Bug 🐛'
+  - title: '📝 Documentation'
+    label: 'Documentation 📝'
+  - title: '🔨 Maintenance'
     label: 'Maintenance 🔨'
 change-template: '- $TITLE (#$NUMBER)'
 template: |
@@ -20,6 +18,6 @@ template: |
   Install with NPM: https://www.npmjs.com/package/vanilla-framework
   Visit the documentation at https://docs.vanillaframework.io
 
-  ## New in v$NEXT_PATCH_VERSION
+  ## New in Vanilla v$NEXT_PATCH_VERSION
 
   $CHANGES
