--- a/.github/workflows/publish-on-release.yml
+++ b/.github/workflows/publish-on-release.yml
@@ -34,8 +34,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12
+          registry-url: https://registry.npmjs.org/
       - run: sudo snap install upload-assets
       - run: echo $GITHUB_REF
+      - run: export VANILLA_VERSION=$(node -p "require('./package.json').version")
+      - run: echo $VANILLA_VERSION
       # - run: upload-assets --url-path vanilla-framework-version-X.X.X.min.css build/css/build.css
       #   env:
       #     UPLOAD_ASSETS_API_TOKEN: ${{secrets.UPLOAD_ASSETS_API_TOKEN}}
