--- a/.github/workflows/publish-on-release.yml
+++ b/.github/workflows/publish-on-release.yml
@@ -40,8 +40,8 @@ jobs:
           registry-url: https://registry.npmjs.org/
       - run: sudo snap install upload-assets
       - run: echo $GITHUB_REF
-      - run: export VANILLA_VERSION=$(node -p "require('./package.json').version")
-      - run: echo $VANILLA_VERSION
-      # - run: upload-assets --url-path vanilla-framework-version-X.X.X.min.css build/css/build.css
-      #   env:
-      #     UPLOAD_ASSETS_API_TOKEN: ${{secrets.UPLOAD_ASSETS_API_TOKEN}}
+      - run: node -p "require('./package.json').version" > VANILLA_VERSION
+      - run: echo $(cat VANILLA_VERSION)
+      - run: upload-assets --url-path vanilla-framework-version-$(cat VANILLA_VERSION).min.css build/css/build.css
+        env:
+          UPLOAD_ASSETS_API_TOKEN: ${{secrets.UPLOAD_ASSETS_API_TOKEN}}
