Fix broken workflows

--- a/.github/workflows/publish-assets.yml
+++ b/.github/workflows/publish-assets.yml
@@ -1,7 +1,7 @@
 name: Release to assets
-# on:
-#   release:
-#     types: [created]
+on:
+  release:
+    types: [created]
 #
 # jobs:
 #   install:
