--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -1,8 +1,7 @@
 name: Release to NPM
-# on:
-#   release:
-#     types: [created]
-#
+on:
+  release:
+    types: [created]
 # jobs:
 #   build:
 #     runs-on: ubuntu-latest
