--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -41,7 +41,7 @@ jobs:
     steps:
       - uses: actions/download-artifact@v1
         with:
-          name: vanilla.css
+          name: css
       - uses: actions/download-artifact@v1
         with:
           name: env
