--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -13,7 +13,6 @@ jobs:
   #         run: |
   #           echo Add other actions to build,
   #           echo test, and deploy your project.
- 
   build:
     runs-on: ubuntu-latest
     steps:
@@ -21,36 +20,84 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
+      - name: Read Vanilla version from package.json
+        run: |
+          node -p "require('./package.json').version" > VANILLA_VERSION
+          echo "Building Vanilla v${cat VANILLA_VERSION}"
       - run: yarn install
       - run: yarn build
       - run: yarn test
+      - run: cp VANILLA_VERSION build/css
       - uses: actions/upload-artifact@v1
         with:
           name: css
           path: build/css
-      - name: Read Vanilla version from package.json
-        run: node -p "require('./package.json').version" > VANILLA_VERSION
-      - uses: actions/upload-artifact@v1
-        with:
-          name: env
-          path: VANILLA_VERSION
 
-  publish:
+  publish-npm:
+    name: Publish to NPM
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12
+          registry-url: https://registry.npmjs.org/
+      - run: npm publish --dry-run
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+
+  publish-assets:
+    name: Publish to assets
     needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/download-artifact@v1
         with:
           name: css
-      - uses: actions/download-artifact@v1
-        with:
-          name: env
-      - run: ls
-      - run: ls css
-      - run: ls env
-      - run: cp css/build.css vanilla-framework-version-$(cat env/VANILLA_VERSION).min.css
-      - run: cat vanilla-framework-version-$(cat env/VANILLA_VERSION).min.css
-      - run: ls
+      - name: Install upload-assets snap
+        run: sudo snap install upload-assets
+      - name: Upload
+        run: upload-assets --url-path vanilla-framework-version-$(cat css/VANILLA_VERSION).min.css css/build.css
+        env:
+          UPLOAD_ASSETS_API_TOKEN: ${{secrets.UPLOAD_ASSETS_API_TOKEN}}
+  # build:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: actions/setup-node@v1
+  #       with:
+  #         node-version: 12
+  #     - run: yarn install
+  #     - run: yarn build
+  #     - run: yarn test
+  #     - uses: actions/upload-artifact@v1
+  #       with:
+  #         name: css
+  #         path: build/css
+  #     - name: Read Vanilla version from package.json
+  #       run: node -p "require('./package.json').version" > VANILLA_VERSION
+  #     - uses: actions/upload-artifact@v1
+  #       with:
+  #         name: env
+  #         path: VANILLA_VERSION
+  #
+  # publish:
+  #   needs: build
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/download-artifact@v1
+  #       with:
+  #         name: css
+  #     - uses: actions/download-artifact@v1
+  #       with:
+  #         name: env
+  #     - run: ls
+  #     - run: ls css
+  #     - run: ls env
+  #     - run: cp css/build.css vanilla-framework-version-$(cat env/VANILLA_VERSION).min.css
+  #     - run: cat vanilla-framework-version-$(cat env/VANILLA_VERSION).min.css
+  #     - run: ls
 #       - name: Test
 #         run: yarn test
 #       - name: Upload artifact
