--- a/.github/workflows/publish-on-release.yml
+++ b/.github/workflows/publish-on-release.yml
@@ -6,27 +6,28 @@ on:
 
 jobs:
   build:
+    name: Build Vanilla
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
           node-version: 12
+      - name: Read Vanilla version from package.json
+        run: |
+          node -p "require('./package.json').version" > VANILLA_VERSION
+          echo "Building Vanilla v$(cat VANILLA_VERSION)"
       - run: yarn install
       - run: yarn build
       - run: yarn test
+      - run: cp VANILLA_VERSION build/css
       - uses: actions/upload-artifact@v1
         with:
-          name: vanilla.css
-          path: build/css/build.css
-      - name: Read Vanilla version from package.json
-        run: node -p "require('./package.json').version" > VANILLA_VERSION
-      - uses: actions/upload-artifact@v1
-        with:
-          name: VANILLA_VERSION
-          path: VANILLA_VERSION
+          name: css
+          path: build/css
 
   publish-npm:
+    name: Publish to NPM
     needs: build
     runs-on: ubuntu-latest
     steps:
@@ -35,24 +36,21 @@ jobs:
         with:
           node-version: 12
           registry-url: https://registry.npmjs.org/
-      - run: npm publish --dry-run
+      - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
 
   publish-assets:
+    name: Publish to assets server
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/download-artifact@v1
         with:
-          node-version: 12
-          registry-url: https://registry.npmjs.org/
+          name: css
       - name: Install upload-assets snap
         run: sudo snap install upload-assets
-      - name: Read Vanilla version from package.json
-        run: node -p "require('./package.json').version" > VANILLA_VERSION
-      - name: Upload
-        run: upload-assets --url-path vanilla-framework-version-$(cat VANILLA_VERSION).min.css build/css/build.css
+      - name: Upload to assets server
+        run: upload-assets --url-path vanilla-framework-version-$(cat css/VANILLA_VERSION).min.css css/build.css
         env:
           UPLOAD_ASSETS_API_TOKEN: ${{secrets.UPLOAD_ASSETS_API_TOKEN}}
