--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -3,6 +3,10 @@ name: Hello
 on: [push]
 
 jobs:
+  docker_build:
+     runs-on: ubuntu-latest
+     steps:
+       - run: docker build --tag vf-test .
   #   hello:
   #     runs-on: ubuntu-latest
   #     steps:
@@ -13,57 +17,57 @@ jobs:
   #         run: |
   #           echo Add other actions to build,
   #           echo test, and deploy your project.
-  build:
-    name: Build Vanilla
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 12
-      - name: Read Vanilla version from package.json
-        run: |
-          node -p "require('./package.json').version" > VANILLA_VERSION
-          echo "Building Vanilla v$(cat VANILLA_VERSION)"
-      - run: yarn install
-      - run: yarn build
-      - run: yarn test
-      - run: cp VANILLA_VERSION build/css
-      - name: Store built files
-        uses: actions/upload-artifact@v1
-        with:
-          name: css
-          path: build/css
+#   build:
+#     name: Build Vanilla
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
+#       - uses: actions/setup-node@v1
+#         with:
+#           node-version: 12
+#       - name: Read Vanilla version from package.json
+#         run: |
+#           node -p "require('./package.json').version" > VANILLA_VERSION
+#           echo "Building Vanilla v$(cat VANILLA_VERSION)"
+#       - run: yarn install
+#       - run: yarn build
+#       - run: yarn test
+#       - run: cp VANILLA_VERSION build/css
+#       - name: Store built files
+#         uses: actions/upload-artifact@v1
+#         with:
+#           name: css
+#           path: build/css
 
-  publish-npm:
-    name: Publish to NPM
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 12
-          registry-url: https://registry.npmjs.org/
-      - run: npm publish --dry-run
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+#   publish-npm:
+#     name: Publish to NPM
+#     needs: build
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
+#       - uses: actions/setup-node@v1
+#         with:
+#           node-version: 12
+#           registry-url: https://registry.npmjs.org/
+#       - run: npm publish --dry-run
+#         env:
+#           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
 
-  publish-assets:
-    name: Publish to assets server
-    needs: [build, publish-npm]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Get css from build job
-        uses: actions/download-artifact@v1
-        with:
-          name: css
-      - name: Install upload-assets snap
-        run: sudo snap install upload-assets
-      - name: Upload to assets server
-        run: upload-assets --url-path vanilla-framework-version-$(cat css/VANILLA_VERSION).min.css css/build.css
-        env:
-          UPLOAD_ASSETS_API_TOKEN: ${{secrets.UPLOAD_ASSETS_API_TOKEN}}
+#   publish-assets:
+#     name: Publish to assets server
+#     needs: [build, publish-npm]
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Get css from build job
+#         uses: actions/download-artifact@v1
+#         with:
+#           name: css
+#       - name: Install upload-assets snap
+#         run: sudo snap install upload-assets
+#       - name: Upload to assets server
+#         run: upload-assets --url-path vanilla-framework-version-$(cat css/VANILLA_VERSION).min.css css/build.css
+#         env:
+#           UPLOAD_ASSETS_API_TOKEN: ${{secrets.UPLOAD_ASSETS_API_TOKEN}}
   # build:
   #   runs-on: ubuntu-latest
   #   steps:
