--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -6,6 +6,7 @@ jobs:
   docker_build:
      runs-on: ubuntu-latest
      steps:
+       - uses: actions/checkout@v2
        - run: docker build --tag vf-test .
   #   hello:
   #     runs-on: ubuntu-latest
