--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -8,6 +8,9 @@ jobs:
      steps:
        - uses: actions/checkout@v2
        - run: DOCKER_BUILDKIT=1 docker build --tag vf-test .
+       - run: docker docker run -ti -p 8101:80 vf-test &
+       - run: sleep 5
+       - run: curl localhost:8101/_status/check
   #   hello:
   #     runs-on: ubuntu-latest
   #     steps:
