run in one step

--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -6,13 +6,12 @@ jobs:
   docker_build:
      runs-on: ubuntu-latest
      steps:
-       - run: docker run --help
-       - run: docker --version
-#        - uses: actions/checkout@v2
-#        - run: DOCKER_BUILDKIT=1 docker build --tag vf-test .
-#        - run: docker docker run -ti -p 8101:80 vf-test &
-#        - run: sleep 5
-#        - run: curl localhost:8101/_status/check
+       - uses: actions/checkout@v2
+       - run: |
+           DOCKER_BUILDKIT=1 docker build --tag vf-test .
+           docker docker run -p 8101:80 vf-test &
+           sleep 5
+           curl localhost:8101/_status/check
   #   hello:
   #     runs-on: ubuntu-latest
   #     steps:
