--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -9,7 +9,7 @@ jobs:
        - uses: actions/checkout@v2
        - run: |
            DOCKER_BUILDKIT=1 docker build --tag vf-test .
-           docker docker run -p 8101:80 vf-test &
+           docker run -ti -p 8101:80 vf-test &
            sleep 5
            curl localhost:8101/_status/check
   #   hello:
