--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -3,14 +3,21 @@ name: Hello
 on: [push]
 
 jobs:
-  docker_build:
-     runs-on: ubuntu-latest
-     steps:
-       - uses: actions/checkout@v2
-       - run: DOCKER_BUILDKIT=1 docker build --tag vf-test .
-       - run: docker run -p 8101:80 vf-test &
-       - run: sleep 5
-       - run: curl localhost:8101/_status/check -I
+  dotrun:
+    runs-on: ubuntu-latest
+    steps: 
+     - uses: actions/checkout@v2
+     - run: ./run
+
+#   docker_build:
+#      runs-on: ubuntu-latest
+#      steps:
+#        - uses: actions/checkout@v2
+#        - run: DOCKER_BUILDKIT=1 docker build --tag vf-test .
+#        - run: docker run -p 8101:80 vf-test &
+#        - run: sleep 5
+#        - run: curl localhost:8101/_status/check -I
+
   #   hello:
   #     runs-on: ubuntu-latest
   #     steps:
