--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -18,6 +18,13 @@ jobs:
        - uses: actions/checkout@v2
        - run: DOCKER_BUILDKIT=1 docker build --tag testrun .
        - run: docker run -p 8765:80 testrun &
+
+  docker_run:
+     runs-on: ubuntu-latest
+     needs: docker_build
+     steps:
+       - uses: actions/checkout@v2
+       - run: docker run -p 8765:80 testrun &
 #       - run: sleep 5
        - run: curl localhost:8765/_status/check -I
 
