--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -26,17 +26,17 @@ jobs:
        - name: Check server status
          run: curl localhost:${PORT}/_status/check -I
 
-  docker_run:
-     runs-on: ubuntu-latest
-     needs: docker_build
-     steps:
-       - uses: actions/checkout@v2
-       - name: Build Docker image
-         run: DOCKER_BUILDKIT=1 docker build --tag testrun .
-       - name: Run server with Docker
-         run: docker run -p ${PORT}:80 testrun &
-       - name: Check server status
-         run: curl localhost:${PORT}/_status/check -I
+#   docker_run:
+#      runs-on: ubuntu-latest
+#      needs: docker_build
+#      steps:
+#        - uses: actions/checkout@v2
+#        - name: Build Docker image
+#          run: DOCKER_BUILDKIT=1 docker build --tag testrun .
+#        - name: Run server with Docker
+#          run: docker run -p ${PORT}:80 testrun &
+#        - name: Check server status
+#          run: curl localhost:${PORT}/_status/check -I
   #   hello:
   #     runs-on: ubuntu-latest
   #     steps:
